src/objects/Sell_Item__c.object
<CustomObject>
    <fields>
        <fullName>Initial_Cost__c</fullName>
        <label>Initial Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parameter_A__c</fullName>
        <label>Parameter A</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parameter_B__c</fullName>
        <label>Parameter B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Price</fullName>
                </value>
                <value>
                    <fullName>Advanced Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sell Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sell Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>